@@ -812,6 +812,7 @@ Release 0.90.0 - Unreleased
    HBASE-3383  [0.90RC1] bin/hbase script displays "no such file" warning on
                target/cached_classpath.txt
    HBASE-3344  Master aborts after RPC to server that was shutting down
+   HBASE-3408  AssignmentManager NullPointerException
 
 
   IMPROVEMENTS
